--- a/index.html
+++ b/index.html
@@ -23,15 +23,11 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="/">Pricing</a>
+          <a href="/">Praject</a>
         </li>
         <li>
           <a href="/">About</a>
         </li>
-        <li>
-          <a href="/">Settings</a>
-        </li>
-      </ul>
     </nav>
     <!-- The JavaScript for The Loading Function -->
     <script>
