--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <!-- Font-Awesome CDN Link -->
     <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css' rel='stylesheet'>
-    <title>Document</title>
+    <title>Official</title>
   </head>
   <!-- The Loading Function(reload to see) -->
   <body onload="myFunction()">
@@ -16,7 +16,7 @@
 <!-- The Navigation Bar -->
     <nav>
         <!-- The Logo inside The Navigation Bar -->
-      <label class="logo">ProgrammingX</label>
+      <label class="logo">Official Web</label>
       <ul>
         <!-- Links/Buttons -->
         <li>
